buildscript {
  repositories {
    gradlePluginPortal()
  }
  dependencies {
    classpath "io.github.fourlastor:construo:2.1.0"
    if(enableGraalNative == 'true') {
      classpath "org.graalvm.buildtools.native:org.graalvm.buildtools.native.gradle.plugin:0.9.28"
    }
  }
}

plugins {
  id "application"
}
apply plugin: 'io.github.fourlastor.construo'

import io.github.fourlastor.construo.Target

sourceSets.main.resources.srcDirs += [ rootProject.file('assets').path ]
application.mainClass = 'com.compileordie.pvz2.lwjgl3.Lwjgl3Launcher'
application.applicationName = appName
eclipse.project.name = appName + '-lwjgl3'
java.sourceCompatibility = 25
java.targetCompatibility = 25
if (JavaVersion.current().isJava9Compatible()) {
  compileJava.options.release.set(25)
}

dependencies {
  implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
  implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
  implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
  implementation project(':core')

  if(enableGraalNative == 'true') {
    implementation "io.github.berstanio:gdx-svmhelper-backend-lwjgl3:$graalHelperVersion"
    implementation "io.github.berstanio:gdx-svmhelper-extension-freetype:$graalHelperVersion"
  }

  constraints {
    implementation("org.lwjgl:lwjgl:$lwjgl3Version")
    implementation("org.lwjgl:lwjgl-glfw:$lwjgl3Version")
    implementation("org.lwjgl:lwjgl-jemalloc:$lwjgl3Version")
    implementation("org.lwjgl:lwjgl-openal:$lwjgl3Version")
    implementation("org.lwjgl:lwjgl-opengl:$lwjgl3Version")
    implementation("org.lwjgl:lwjgl-stb:$lwjgl3Version")
  }
}

def os = System.properties['os.name'].toLowerCase(Locale.ROOT)

run {
  workingDir = rootProject.file('assets').path
  jvmArgs += "--enable-native-access=ALL-UNNAMED"
  if (os.contains('mac')) jvmArgs += "-XstartOnFirstThread"
}

jar {
  archiveFileName.set("${appName}-${projectVersion}.jar")
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
  dependsOn configurations.runtimeClasspath
  from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }

  exclude('META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA')
  dependencies {
    exclude('META-INF/INDEX.LIST', 'META-INF/maven/**')
  }

  manifest {
    attributes(
      'Main-Class': application.mainClass,
      'Enable-Native-Access': 'ALL-UNNAMED',
      'Multi-Release': 'true'
    )
  }

  doLast {
    file(archiveFile).setExecutable(true, false)
  }
}

distributions {
  main {
    contents {
      from(rootProject.file('assets'))
      into('libs') {
        project.configurations.runtimeClasspath.files.findAll { file ->
          file.getName() != project.tasks.jar.outputs.files.singleFile.name
        }.each { file ->
          exclude file.name
        }
      }
    }
  }
}

construo {
  name.set(appName)
  humanName.set(appName)
  jlink {
    guessModulesFromJar.set(false)
    modules.addAll("java.base", "java.management", "java.desktop", "jdk.unsupported")
  }

  targets.configure {
    register("winX64", Target.Windows) {
      architecture.set(Target.Architecture.X86_64)
      icon.set(project.file("icons/logo.png"))
      jdkUrl.set("http://localhost:8000/jdk-25-windows.zip")
      useConsole.set(false)
    }
  }
}

tasks.withType(JavaExec.class).configureEach {
  environment("__GL_THREADED_OPTIMIZATIONS", 0)
}

if(enableGraalNative == 'true') {
  apply from: file("nativeimage.gradle")
}
